Müşteri Arıza/Bakım CRUD işlemleri yapıldı

--- a/src/main/webapp/WEB-INF/template/menu.xhtml
+++ b/src/main/webapp/WEB-INF/template/menu.xhtml
@@ -23,6 +23,10 @@
 							<p:menuitem value="Adminler" icon="fa fa-fw fa-check-circle"
 								outcome="/admin/admins" />
 						</p:submenu>
+						
+						
+						<p:menuitem value="Bakım Yapılacak Cihazlar"
+							icon="fa fa-fw fa-cogs" outcome="/admin/issues" />
 					</pa:menu>
 				</pa:tab>
 			</pa:tabMenu>
@@ -36,6 +40,10 @@
 							
 						<p:menuitem value="Cihazlarım"
 							icon="fa fa-fw fa-hdd-o" outcome="/customer/devices" />
+							
+						<p:menuitem value="Bakım / Onarım" 
+							icon="fa fa-fw fa-tasks" outcome="/customer/issues" />
+							
 
 						
 					</pa:menu>
